[package]
name = "single_blockchain_for_learn"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.5"
hex = "0.4.3"
uint = "0.9.1"
lazy_static = "1.4.0"
clap = "2.33.3"
rand = "0.8.4"
threadpool = "1.8.1"

[[bin]]
name = "main"
path = "src/main.rs"
[[bin]]
name = "bft"
path = "bin/bft.rs"